Save and restore scale property
Save and restore "show grid" property
Save and restore selected mode
Modified the cartoon offset scales for Earth/Satellite mode so that inter-body distance remains the same in cartoon as in real scales
# 0.0.14 (47788) Jan 8, 2011
Fixed: dragging an object through a collision still leaves a path drawn, solved by stopping the path after collision
Fixed: "return body" after a collision causes a jump in the path drawn, solved by clearing the path after "return body"
# 0.0.13 (47777) Jan 7, 2011
Added a grid
Added a "return object" button that allows the user to bring back a destroyed or lost object
Improved drag handling by converting to a 1-D bisection root finding algorithm for inverting cartoon mapping
Made checkbox-gray out a windows specific fix
Moved "on" and "off" strings from phetcommon game mode to gravity and orbits
Fixed: If you change the values of a system like the mass, or position and then press "Earth values", some force vectors are missing.
Removed application specific overrides for adding antialiasing
Added horizontal space between gravity control label and on/off buttons
change Gravity control to a pair of on/off buttons
# 0.0.12 (47614) Jan 4, 2011
Added a continuous interpolation between cartoon and real coordinates and numerical inversion of interpolation
# 0.0.11 (47576) Jan 3, 2011
Fixed: mass sliders don't snap to ticks properly
Fixed: path looks "crinkly"
Added strings for mode names, may be added into tooltips or labels
Fixed: Inconsistent icons sizes on mass sliders
Fixed: use the same cartoon scales for earth and moon so their radii are proportionately correct
Made it so the tape measure icon appears gray instead of white when disabled
rescaled control panel to fit on the stage
renamed "earth system" to "earth values"
fix: append command line args to standard main frame title, instead of replacing title (for sim-sharing)
# 0.0.10 (47428) Dec 27, 2010
12/27/10 dev version with many fixes and changes