@@ -1,3 +1,5 @@
+Reset measuring tape on reset all
+Save and restore measuring tape visibility and location
 Save and restore scale property
 Save and restore "show grid" property
 Save and restore selected mode
